# perry-mpc

./: Cargo.toml  README.md  katex-header.html
cggmp21/: CHANGELOG.md  Cargo.toml
cggmp21-keygen/: CHANGELOG.md  Cargo.toml
cggmp21-keygen/src/: threshold.rs
cggmp21/src/: lib.rs  signing.rs  trusted_dealer.rs
cggmp21/src/key_refresh/: aux_only.rs  non_threshold.rs
hex_or_bin/: hex_or_bin.rs
key-share/: CHANGELOG.md  Cargo.toml
key-share/src/: trusted_dealer.rs
tests/: Cargo.toml
tests/benches/: exp.rs
tests/src/: lib.rs
tests/tests/it/: key_refresh.rs  keygen.rs  main.rs  pipeline.rs  signing.rs  stark_prehashed.rs  trusted_dealer.rs
wasm/no_std/: Cargo.toml
